# mis-core

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  TODO  config.py  const.py  loaders.py  main.py  pyproject.toml  pytest.ini  requirements.txt  version.py
.github/workflows/: build.yml  ci.yml  tests.yml
core/: __init__.py  auth_backend.py  scopes.py  utils.py
core/consumers/: __init__.py  consumers.py
core/crud/: __init__.py  access_group.py  base.py  guardian.py  job.py  module.py  notification.py  permission.py  restricted_object.py  team.py  user.py  variable.py
core/db/: __init__.py  dataclass.py  guardian.py  helpers.py  mixin.py  models.py  permission.py  restricted.py  schemas.py
core/dependencies/: __init__.py  access_group.py  context.py  guardian.py  misc.py  module.py  path.py  routing_key_service.py  security.py  services.py  settings.py  task.py  uow.py  variable_service.py  variables.py
core/exceptions/: __init__.py  exceptions.py
core/migrations/: core-0001-init.py  core-0002-char_length.py  core-0002-rename.py  core-0003-guardian.py  core-0003-user_client_data.py  core-0003-user_data.py  core-0004-job.py  core-0005-state.py
core/repositories/: granted_permission.py  guardian_access_group.py  guardian_content_type.py  guardian_group_permission.py  guardian_permission.py  guardian_user_permission.py  job_storage.py  module.py  permission.py  (+8 more)
docker/: gunicorn_conf.py
env_override/: test.env
envs/: .env.example  dev.env  test.env
tests/: config.py  conftest.py  readme.md  test_core_users.py  tortoise_test_overwrite.py  utils.py
(+404 files in other folders)
